# churn_prediction_mk

./: .dockerignore  .gitignore  Dockerfile  dvc.yaml  make_folders.sh  notebook.ipynb  params.yaml  pyproject.toml  restart_model.sh  system_init.sh
app/: main.py
app/schemas/: sample_schema.py
app/utils/: prediction.py
models/: model.xgboost
src/: __init__.py
src/churn_prediction_mk/api/: main.py
src/churn_prediction_mk/api/routes/: route.py
src/churn_prediction_mk/api/utils/: prediction.py
src/churn_prediction_mk/data_preprocessing/: preprocess_data.py
src/churn_prediction_mk/feature_engineering/: engineer_features.py
src/churn_prediction_mk/model_evaluation/: evaluate_model.py
src/churn_prediction_mk/model_training/: train_model.py
src/data_preprocessing/: preprocess_data.py
